--- a/examen1ds39/appsettings.json
+++ b/examen1ds39/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "conexion": "Data Source=LAPTOP-GAMJVJI5;Initial Catalog=examen1ds39;Integrated Security=True;Trust Server Certificate=True"
+  }
 }
